# cheshirecat-admin

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-release.yml
.streamlit/: config.toml
app/: constants.py  env.py  main.py  utils.py
app/routes/: agentic_workflows.py  auth_handlers.py  chunkers.py  context_retriever.py  embedders.py  file_managers.py  llms.py  loading.py  login.py  memories.py  message.py  plugins.py  rabbit_hole.py  users.py  utilities.py  vector_databases.py  welcome.py
app/routes/admins/: crud.py  plugins.py  utilities.py
