[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "grinning-cat-admin"
version = "0.1.0"
description = "Python package for the Grinning Cat Admin UI"
authors = [
    {name = "Matteo Cacciola", email = "matteo.cacciola@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grinning-cat-python-sdk",
    "streamlit-js-eval",
    "python-dotenv",
    "python-slugify",
    "requests",
    "streamlit",
]

[project.urls]
Homepage = "https://github.com/matteocacciola/grinning-cat-admin"
Repository = "https://github.com/matteocacciola/grinning-cat-admin"
Issues = "https://github.com/matteocacciola/grinning-cat-admin/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
